Create and style form

--- a/index.html
+++ b/index.html
@@ -15,11 +15,35 @@
             </div>
         </div>
         <div class="right-panel">
-            <p>This is not a real online service!You know you need something
-                like this in your life to help you realize your deepest dreams.
+            <div class="upper-text">
+                <p>This is not a real online service! You know you need something
+                like this in your life to help you realize your deepest dreams. <br>
                 Sign up now to get started.
-            </p>
-        
+                </p>
+            </div>
+            <form class="login-form">
+                <h2>Let's do this!</h2>
+                <div class="form-items">
+                    <div class="form-right">
+                        <label for="name">FIRST NAME</label>
+                        <input type="text" name="name" id="name" required>
+                        <label for="name">LAST NAME</label>
+                        <input type="text" name="name" id="name" required>
+                        <label for="email">EMAIL</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="form-left">
+                        <label for="number">PHONE NUMBER</label>
+                        <input type="number" name="number" id="number" required>
+                        <label for="password">PASSWORD</label>
+                        <input type="password" name="password" id="password" required>
+                        <label for="password">CONFIRM PASSWORD</label>
+                        <input type="password" name="password" id="password" required> 
+                    </div>
+                </div>
+                    
+            </form>
+
         </div>
     </div>
 </body>
