Create submit button

--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
                 <div class="form-items">
                     <div class="form-right">
                         <label for="name">FIRST NAME</label>
-                        <input type="text" name="name" id="name" required>
-                        <label for="name">LAST NAME</label>
-                        <input type="text" name="name" id="name" required>
+                        <input type="text" name="name" id="name" placeholder="Thor">
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email" required>
-                    </div>
-                    <div class="form-left">
-                        <label for="number">PHONE NUMBER</label>
-                        <input type="number" name="number" id="number" required>
+                        <input type="email" name="email" id="email"required>
                         <label for="password">PASSWORD</label>
                         <input type="password" name="password" id="password" required>
+                    </div>
+                    <div class="form-left">
+                        <label for="name">LAST NAME</label>
+                        <input type="text" name="name" id="name" placeholder="Odinson" required>
+                        <label for="number">PHONE NUMBER</label>
+                        <input type="number" name="number" id="number" required>
                         <label for="password">CONFIRM PASSWORD</label>
                         <input type="password" name="password" id="password" required> 
                     </div>
                 </div>
-                    
             </form>
-
+            <div>
+                <button type="submit">Create Account</button>
+                <p class="login-link">Already have an account?<a href="#">Log in</a></p> 
         </div>
     </div>
 </body>
